Changes: - Fixed alignments of messages

--- a/src/LightTown/LightTown.Client.Web/wwwroot/css/site.css
+++ b/src/LightTown/LightTown.Client.Web/wwwroot/css/site.css
@@ -124,3 +124,7 @@ h5 {
 .titletxt {
     font-size: xx-large;
 }
+
+.text-center {
+    text-align: center;
+}
